# api-server/routes/about.js
@@ -5,6 +5,8 @@ const axios = require('axios');
 
 // Endpoint: /api/v1/about
 router.get('/', (req, res, next) => {
+  // #swagger.tags = ['About']
+  // #swagger.description = 'returns static information about me'
   res.header('Content-Type', 'application/json; charset=utf-8');
   res.json({
     "path": req.originalUrl,
@@ -14,6 +16,8 @@ router.get('/', (req, res, next) => {
 
 // Endpoint: /api/v1/about/books
 router.get('/books', async (req, res, next) => {
+  // #swagger.tags = ['About']
+  // #swagger.description = 'list of books responses from Booklog API'
   const url = 'https://api.booklog.jp/v2/json/hwakabh'
   const books = await axios.get(url)
     .then(response => {
@@ -33,9 +37,11 @@ router.get('/books', async (req, res, next) => {
 })
 
 
-// Endpoint: /api/v1/about/movies
 // TODO: need to add scraping features
+// Endpoint: /api/v1/about/movies
 router.get('/movies', (req, res, next) => {
+  // #swagger.tags = ['About']
+  // #swagger.description = 'list of movies from the results of scrapping Filmarks'
   res.header('Content-Type', 'application/json; charset=utf-8');
   res.json({
     "path": req.originalUrl,
