# schemas/swagger.json
@@ -13,14 +13,33 @@
   ],
   "tags": [
     {
-      "name": "",
-      "description": ""
+      "name": "General",
+      "description": "Endpoints for application management"
+    },
+    {
+      "name": "About",
+      "description": "APIs related to information of about me"
+    },
+    {
+      "name": "CV",
+      "description": "APIs related to information of professional career"
+    },
+    {
+      "name": "Works",
+      "description": "APIs related to information of personal works"
+    },
+    {
+      "name": "Contact",
+      "description": "Endpoint for email contact"
     }
   ],
   "paths": {
     "/": {
       "get": {
-        "description": "API root",
+        "tags": [
+          "General"
+        ],
+        "description": "backend API root",
         "responses": {
           "200": {
             "description": "OK"
@@ -30,7 +49,10 @@
     },
     "/healthz": {
       "get": {
-        "description": "",
+        "tags": [
+          "General"
+        ],
+        "description": "Endpoint of probe target",
         "responses": {
           "200": {
             "description": "OK"
@@ -40,7 +62,10 @@
     },
     "/api/v1/contact": {
       "get": {
-        "description": "",
+        "tags": [
+          "Contact"
+        ],
+        "description": "invoke external API to send email",
         "responses": {
           "200": {
             "description": "OK"
@@ -50,7 +75,10 @@
     },
     "/api/v1/about/": {
       "get": {
-        "description": "",
+        "tags": [
+          "About"
+        ],
+        "description": "returns static information about me",
         "responses": {
           "200": {
             "description": "OK"
@@ -60,7 +88,10 @@
     },
     "/api/v1/about/books": {
       "get": {
-        "description": "",
+        "tags": [
+          "About"
+        ],
+        "description": "list of books responses from Booklog API",
         "responses": {
           "200": {
             "description": "OK"
@@ -70,7 +101,10 @@
     },
     "/api/v1/about/movies": {
       "get": {
-        "description": "",
+        "tags": [
+          "About"
+        ],
+        "description": "list of movies from the results of scrapping Filmarks",
         "responses": {
           "200": {
             "description": "OK"
@@ -80,7 +114,10 @@
     },
     "/api/v1/cv/": {
       "get": {
-        "description": "",
+        "tags": [
+          "CV"
+        ],
+        "description": "returns static contents about career summaries",
         "responses": {
           "200": {
             "description": "OK"
@@ -90,7 +127,10 @@
     },
     "/api/v1/cv/projects": {
       "get": {
-        "description": "",
+        "tags": [
+          "CV"
+        ],
+        "description": "returns list of projects with static contents",
         "responses": {
           "200": {
             "description": "OK"
@@ -100,7 +140,10 @@
     },
     "/api/v1/works/": {
       "get": {
-        "description": "",
+        "tags": [
+          "Works"
+        ],
+        "description": "list of personal works with static contents",
         "responses": {
           "200": {
             "description": "OK"
